update led driver, more structed architecture

--- a/ADXL345_basic_data/Debug/makefile
+++ b/ADXL345_basic_data/Debug/makefile
@@ -9,6 +9,7 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include src/lib/cubeMX520_f103rb/Drivers/STM32F1xx_HAL_Driver/Src/subdir.mk
+-include src/lib/cubeMX520_f103rb/subdir.mk
 -include src/hw/driver/subdir.mk
 -include src/hw/subdir.mk
 -include src/bsp/startup/subdir.mk
