--- a/ADXL345_basic_data/.cproject
+++ b/ADXL345_basic_data/.cproject
@@ -84,9 +84,16 @@
 							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec.1256337942" name="MCU Output Converter Motorola S-rec with symbols" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec"/>
 						</toolChain>
 					</folderInfo>
-					<fileInfo id="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.184060185.1581400167" name="STM32F103RB_FLASH.ld" rcbsApplicability="disable" resourcePath="src/lib/cubeMX520_f103rb/STM32F103RB_FLASH.ld" toolsToInvoke=""/>
+					<fileInfo id="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.184060185.1581400167" name="STM32F103RB_FLASH.ld" rcbsApplicability="disable" resourcePath="src/lib/cubeMX520_f103rb/STM32F103RB_FLASH.ld" toolsToInvoke="">
+						<tool customBuildStep="true" id="org.eclipse.cdt.managedbuilder.ui.rcbs.1730412565" name="Resource Custom Build Step">
+							<inputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.inputtype.155292223" name="Resource Custom Build Step Input Type">
+								<additionalInput kind="additionalinputdependency" paths=""/>
+							</inputType>
+							<outputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.outputtype.1388193625" name="Resource Custom Build Step Output Type"/>
+						</tool>
+					</fileInfo>
 					<sourceEntries>
-						<entry excluding="src/lib/cubeMX520_f103rb/startup|src/lib/cubeMX520_f103rb/Src|src/lib/cubeMX520_f103rb/Inc|src/lib/cubeMX520_f103rb/STM32F103RB_FLASH.ld" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="src/lib/cubeMX520_f103rb/startup|src/lib/cubeMX520_f103rb/Src|src/lib/cubeMX520_f103rb/Inc" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
